<resources>
    <string name="app_name">Farmer Price App</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="description">Our Tamatos are very good in tast and size</string>
    <string name="farmer_commu">A farmer community is a group of individuals who engage in agricultural activities, often residing in rural areas. They cultivate crops, raise livestock, and manage farms, contributing significantly to the food supply chain. These communities are characterized by strong bonds and mutual support, sharing resources and knowledge to improve productivity and sustainability. They often face challenges such as weather dependency, market fluctuations, and access to modern technology. Despite these hurdles, farmer communities play a crucial role in maintaining agricultural traditions and ensuring food security.</string>
    <string name="welcome">Welcome to Farmer Price App</string>
    <string name="select">Select Language</string>
    <string name="buy_now">Buy Now</string>
    <string name="total_amount_inr_600">Total Amount : INR 600</string>
    <string name="qnt">Qnt</string>
    <string name="price">Price</string>
    <string name="pid">PID</string>
    <string name="product">Product</string>
    <string name="detailed_products">Detailed Products</string>
    <string name="price_30_kg">Price :30/Kg</string>
    <string name="des">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price_10_kg">Price :10/Kg</string>
    <string name="descriptio">Description</string>
    <string name="natural_califore_good_in_taste">Natural Califore good in taste</string>
    <string name="price_50_kg">Price :50/Kg</string>
    <string name="capcicum">Capcicum</string>
    <string name="based_on_your_land_details">Based on Your Land Details</string>
    <string name="you_have_to_cultivate_rice_or_onion">You Have to Cultivate Rice or Onion</string>
    <string name="enter_farmer_name">Enter farmer name</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="enter_item_quantity">Enter item quantity</string>
    <string name="sell_item">Sell Item</string>
    <string name="farmer_community">Farmer Community</string>
    <string name="farmer_sell">Farmer Sell</string>
    <string name="farmer_details">Farmer Details</string>
    <string name="farmer_name">Farmer name</string>
    <string name="village">Village</string>
    <string name="land">Land</string>
    <string name="store">Store</string>
    <string name="farmers">Farmers</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="check_cart">Check Cart</string>
    <string name="email">Email</string>
    <string name="order_successful">Order Successful!</string>
    <string name="tomato">Tomato</string>
    <string name="fresh_tamato">Fresh Tamato</string>
    <string name="cauliflower">Cauliflower</string>
    <string name="fresh_flower">Fresh Flower</string>
    <string name="green_capcicum">Green Capcicum</string>
    <string name="beans">Beans</string>
    <string name="tall_beans">Tall Beans</string>
    <string name="kothimer">Kothimer</string>
    <string name="green_leaves">Green Leaves</string>
    <string name="vegetables">Vegetables</string>
    <string name="name">Name</string>
    <string name="address_details">Address Details</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
</resources>