<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".item_details">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/t1"


        android:hint="@string/product_id"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/t2"
        android:layout_marginTop="30dp"

        android:hint="@string/product_name"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/t3"
        android:layout_marginTop="30dp"

        android:hint="@string/product_price"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/t4"
        android:layout_marginTop="30dp"

        android:hint="@string/product_quantity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/add_to_cart"

        android:id="@+id/b1"
        android:padding="10dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/check_cart"

        android:id="@+id/b2"
        android:padding="10dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl"
        android:layout_marginTop="20dp"
        android:text=""/>


</androidx.appcompat.widget.LinearLayoutCompat>