<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FarmerCommunity"
    android:background="#C5FDAD">

    <TextView
        android:id="@+id/farmercommunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Farmer Community"
        android:layout_marginLeft="25dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/farmer_commu"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/based_on_your_land_details"
        android:textSize="30dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_have_to_cultivate_rice_or_onion"
        android:textColor="@color/black"
        android:textSize="20dp"
        />
</LinearLayout>